hal/Athena/src/main/native/NetworkCommunication/FRCComm.h

	int EXPORT_FUNC setUserDsLcdData(const char *userDsLcdData, int userDsLcdDataLength, int wait_ms);
	int EXPORT_FUNC overrideIOConfig(const char *ioConfig, int wait_ms);
	void EXPORT_FUNC setNewDataSem(HANDLE);
	void EXPORT_FUNC setNewDataSem(SEM_ID);
	void EXPORT_FUNC setResyncSem(SEM_ID);
	void EXPORT_FUNC setNewDataSem(pthread_mutex_t *);
	void EXPORT_FUNC setResyncSem(pthread_mutex_t *);
	void EXPORT_FUNC signalResyncActionDone(void);
	// this uint32_t is really a LVRefNum
	void EXPORT_FUNC setNewDataOccurRef(uint32_t refnum);
	void EXPORT_FUNC setResyncOccurRef(uint32_t refnum);
	void EXPORT_FUNC FRC_NetworkCommunication_getVersionString(char *version);
	void EXPORT_FUNC FRC_NetworkCommunication_observeUserProgramStarting(void);
	void EXPORT_FUNC FRC_NetworkCommunication_observeUserProgramDisabled(void);
	void EXPORT_FUNC FRC_NetworkCommunication_observeUserProgramAutonomous(void);
	void EXPORT_FUNC FRC_NetworkCommunication_observeUserProgramTeleop(void);
	void EXPORT_FUNC FRC_NetworkCommunication_observeUserProgramTest(void);