wpilibj/src/main/java/edu/wpi/first/wpilibj/communication/FRC_NetworkCommunicationsLibrary.java

	/**
	 * Original signature : <code>int setUserDsLcdData(const char*, int, int)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:155</i><br>
	 * @deprecated use the safer methods {@link #setUserDsLcdData(java.lang.String, int, int)} and {@link #setUserDsLcdData(com.sun.jna.Pointer, int, int)} instead
	 */
	@Deprecated 
	public static native int setUserDsLcdData(Pointer userDsLcdData, int userDsLcdDataLength, int wait_ms);
	/**
	 * Original signature : <code>int setUserDsLcdData(const char*, int, int)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:155</i>
	 */
	public static native int setUserDsLcdData(String userDsLcdData, int userDsLcdDataLength, int wait_ms);
	/**
	 * Original signature : <code>int overrideIOConfig(const char*, int)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:156</i><br>
	 * @deprecated use the safer methods {@link #overrideIOConfig(java.lang.String, int)} and {@link #overrideIOConfig(com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	public static native int overrideIOConfig(Pointer ioConfig, int wait_ms);
	/**
	 * Original signature : <code>int overrideIOConfig(const char*, int)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:156</i>
	 */
	public static native int overrideIOConfig(String ioConfig, int wait_ms);
	/**
	 * Original signature : <code>void setNewDataSem(pthread_mutex_t*)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:165</i>
	 */
	public static native void setNewDataSem(Pointer pthread_mutex_tPtr1);
	/**
	 * Original signature : <code>void setResyncSem(pthread_mutex_t*)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:166</i>
	 */
	public static native void setResyncSem(Pointer pthread_mutex_tPtr1);
	/**
	 * Original signature : <code>void signalResyncActionDone()</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:168</i>
	 */
	public static native void signalResyncActionDone();
	/**
	 * this uint32_t is really a LVRefNum<br>
	 * Original signature : <code>void setNewDataOccurRef(uint32_t)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:172</i>
	 */
	public static native void setNewDataOccurRef(int refnum);
	/**
	 * Original signature : <code>void setResyncOccurRef(uint32_t)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:174</i>
	 */
	public static native void setResyncOccurRef(int refnum);
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_getVersionString(char*)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:177</i><br>
	 * @deprecated use the safer methods {@link #FRC_NetworkCommunication_getVersionString(java.nio.ByteBuffer)} and {@link #FRC_NetworkCommunication_getVersionString(com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	public static native void FRC_NetworkCommunication_getVersionString(Pointer version);
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_getVersionString(char*)</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:177</i>
	 */
	public static native void FRC_NetworkCommunication_getVersionString(ByteBuffer version);
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_observeUserProgramStarting()</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:178</i>
	 */
	public static native void FRC_NetworkCommunication_observeUserProgramStarting();
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_observeUserProgramDisabled()</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:179</i>
	 */
	public static native void FRC_NetworkCommunication_observeUserProgramDisabled();
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_observeUserProgramAutonomous()</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:180</i>
	 */
	public static native void FRC_NetworkCommunication_observeUserProgramAutonomous();
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_observeUserProgramTeleop()</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:181</i>
	 */
	public static native void FRC_NetworkCommunication_observeUserProgramTeleop();
	/**
	 * Original signature : <code>void FRC_NetworkCommunication_observeUserProgramTest()</code><br>
	 * <i>native declaration : /home/alex/Projects/WPILib-Development/WPILibC/WPILib/src/main/include/NetworkCommunication/FRCComm.h:182</i>
	 */
	public static native void FRC_NetworkCommunication_observeUserProgramTest();
	public static class STATUS extends PointerType {
		public STATUS(Pointer address) {
			super(address);
		}
		public STATUS() {
			super();
		}
	};
}
